# openflash

./: CHANGELOG.md  README.md  ROADMAP.md  {
.github/workflows/: ci.yml  ci.yml.disabled  debug-build.yml  manual-windows.yml  release.yml
openflash/: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
openflash/cli/: Cargo.toml
openflash/cli/src/: commands.rs  main.rs
openflash/core/: Cargo.toml
openflash/core/src/: ai.rs  ai_advanced.rs  analysis.rs  cloud.rs  ecc.rs  emmc.rs  hardware.rs  lib.rs  onfi.rs  protocol.rs  scripting.rs  server.rs  spi_nand.rs  spi_nor.rs  ufs.rs  write_ops.rs
openflash/docs/: HARDWARE_GUIDE.md
openflash/firmware/arduino_giga/: Cargo.toml
openflash/firmware/arduino_giga/src/: fmc_nand.rs  main.rs  sdmmc.rs  spi_flash.rs  usb_handler.rs
openflash/firmware/banana_pi/: Cargo.toml
openflash/firmware/banana_pi/src/: gpio.rs  main.rs  protocol.rs  spi.rs
openflash/firmware/esp32/: Cargo.toml
openflash/firmware/esp32/src/: emmc.rs  main.rs  nand_gpio.rs  protocol.rs  spi_nand.rs  spi_nor.rs
openflash/firmware/orange_pi/: Cargo.toml
openflash/firmware/orange_pi/src/: gpio.rs  main.rs  protocol.rs  spi.rs
openflash/firmware/raspberry_pi/: Cargo.toml
openflash/firmware/raspberry_pi/src/: gpio_nand.rs  gpio_spi.rs  main.rs  protocol.rs
openflash/firmware/rp2040/: Cargo.toml
openflash/firmware/rp2040/src/: emmc.rs  main.rs  pio_nand.rs  spi_nor.rs  usb_handler.rs
openflash/firmware/rp2350/: Cargo.toml
openflash/firmware/rp2350/src/: emmc.rs  main.rs  pio_nand.rs  spi_nand.rs  spi_nor.rs  usb_handler.rs
openflash/firmware/stm32f1/: Cargo.toml
openflash/firmware/stm32f1/src/: emmc.rs  main.rs  spi_nand.rs  spi_nor.rs  usb_handler.rs
openflash/firmware/stm32f4/: Cargo.toml
openflash/firmware/stm32f4/src/: emmc.rs  main.rs  nand_fsmc.rs  spi_nand.rs  spi_nor.rs  usb_handler.rs
openflash/firmware/teensy4/: Cargo.toml
openflash/firmware/teensy4/src/: flexio_nand.rs  gpio_nand.rs  main.rs  protocol.rs  spi.rs  usb.rs
openflash/gui/: index.html  package.json
openflash/gui/src/: App.tsx  styles.css
openflash/gui/src-tauri/: Cargo.toml  tauri.conf.json
openflash/gui/src-tauri/src/: command.rs  config.rs  device.rs  flasher.rs  lib.rs  mock.rs
openflash/gui/src/components/: AiAnalysis.css  AiAnalysis.tsx  NetworkDeviceDialog.css  NetworkDeviceDialog.tsx  PlatformInfo.css  PlatformInfo.tsx  SpiNorOperations.css  SpiNorOperations.tsx  UfsLunSelector.css  UfsLunSelector.tsx
openflash/pyopenflash/src/: lib.rs
