[package]
name = "openflash-firmware-banana-pi"
version = "2.3.5"
edition = "2021"
description = "OpenFlash GPIO driver for Banana Pi (M2 Zero, M4 Berry, BPI-F3)"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["fs", "ioctl"] }
memmap2 = "0.9"
libc = "0.2"

[features]
default = ["h3"]
# Banana Pi variants
h3 = []       # Banana Pi M2 Zero (Allwinner H3)
h618 = []     # Banana Pi M4 Berry (Allwinner H618)
k1 = []       # Banana Pi BPI-F3 (SpacemiT K1 RISC-V)

[[bin]]
name = "openflash-gpio"
path = "src/main.rs"
