[package]
name = "openflash-firmware-orange-pi"
version = "2.3.0"
edition = "2021"
description = "OpenFlash GPIO driver for Orange Pi (Zero 3, 2W, 5)"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["fs", "ioctl"] }
memmap2 = "0.9"

[features]
default = ["h618"]
# Orange Pi variants
h618 = []    # Orange Pi Zero 3 (Allwinner H618)
h616 = []    # Orange Pi Zero 2W (Allwinner H616)
rk3588 = []  # Orange Pi 5 (Rockchip RK3588)

[[bin]]
name = "openflash-gpio"
path = "src/main.rs"
