[package]
name = "openflash-firmware-raspberry-pi"
version = "2.3.0"
edition = "2021"
description = "OpenFlash GPIO driver for Raspberry Pi (3B+, 4, 5, Zero 2W)"

[dependencies]
rppal = "0.18"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

[features]
default = ["rpi4"]
rpi3 = []
rpi4 = []
rpi5 = []
zero2w = []

[[bin]]
name = "openflash-gpio"
path = "src/main.rs"
