[package]
name = "openflash-firmware-rp2040"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embassy-rp = { version = "0.1", features = ["rp2040", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = "0.1"
embassy-usb = "0.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"
pio-proc = "0.2"
pio = "0.2"
usb-device = "0.2"
openflash-core = { path = "../core" }

[profile.dev]
debug = 2
lto = true

[profile.release]
lto = true

