[package]
name = "openflash-firmware-rp2350"
version = "2.3.0"
edition = "2021"
description = "OpenFlash firmware for Raspberry Pi Pico 2 (RP2350)"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embassy-rp = { version = "0.3", features = ["rp2350", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = "0.3"
embassy-usb = "0.3"
embassy-executor = { version = "0.6", features = ["task-arena-size-65536", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"
pio = "0.2"
pio-proc = "0.2"
heapless = "0.8"

[features]
default = ["cortex-m33"]
# RP2350 supports both Cortex-M33 and RISC-V (Hazard3) cores
cortex-m33 = []
riscv = []

[profile.dev]
debug = 2
lto = true

[profile.release]
lto = true
opt-level = "z"
