[package]
name = "openflash-firmware-teensy4"
version = "2.3.5"
edition = "2021"
description = "OpenFlash firmware for Teensy 4.0/4.1 (NXP i.MX RT1062)"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
teensy4-bsp = "0.4"
teensy4-panic = "0.2"
imxrt-hal = "0.5"
imxrt-ral = "0.5"
imxrt-usbd = "0.3"
usb-device = "0.3"
usbd-serial = "0.2"
embedded-hal = "1.0"
heapless = "0.8"
defmt = "0.3"
defmt-rtt = "0.4"
nb = "1.1"

[features]
default = ["teensy40"]
teensy40 = []   # Teensy 4.0 (no SD card, 1MB flash)
teensy41 = []   # Teensy 4.1 (SD card slot, 8MB flash, Ethernet)
mm = []         # Teensy MicroMod (SparkFun carrier boards)

[profile.dev]
debug = 2
opt-level = 1
lto = false

[profile.release]
opt-level = "z"
lto = true
debug = false
