[package]
name = "openflash-gui"
version = "0.1.0"
description = "OpenFlash Desktop Application"
edition = "2021"

[lib]
name = "openflash_gui_lib"
crate-type = ["lib", "cdylib"]

[dependencies]
tauri = { version = "2.0", features = ["api-all"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
openflash-core = { path = "../../core" }
rusb = "0.9"
nusb = "0.1"

[dependencies.tauri]
version = "2.0"
features = ["api-all"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --features dev` which enables the dev feature
default = ["custom-protocol"]
dev = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
